--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "The Odin Project - JavaScript Course - Project: Testing Practice",
   "main": "index.js",
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "watch": "jest --watch ."
   },
   "keywords": [],
   "author": "",
